fixed beyond width on mobile phone

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -281,15 +281,12 @@ code {
 }
 pre {
   display: block;
+	overflow-x: auto;
   margin-top: 0;
   margin-bottom: 1rem;
   padding: 1rem;
   font-size: .8rem;
   line-height: 1.4;
-  white-space: pre;
-  white-space: pre-wrap;
-  word-break: break-all;
-  word-wrap: break-word;
   background-color: #f5f5f5;
 }
 pre code {
